--- a/index.html
+++ b/index.html
@@ -2,64 +2,138 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>BAZARA safia</title>
+  <title>Home - BAZARA safia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Google Fonts Einbindung -->
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300&display=swap" rel="stylesheet">
   
   <style>
     body {
       margin: 0;
-      background-color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      font-smooth: always;
+      font-family: 'Inter', sans-serif;
+      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      font-smooth: always; 
+      padding-top: 100px; /* Angepasster Platz für die fixe Navigationsleiste (ca. Höhe der Nav-Bar) */
     }
 
-    .wrapper {
+    .main-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #ffffff;
+      border-bottom: 1px solid #000000;
+      padding: 20px 25px; /* Deutlich erhöhtes Padding oben/unten für mehr Höhe der Navigationsleiste */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      box-sizing: border-box; 
+      z-index: 1000;
+    }
+
+    /* Logo Stile für das Menü */
+    .menu-logo .logo-link {
+      text-decoration: none;
+      color: inherit;
+      display: inline-block;
+      padding-top: 3px;
+    }
+
+    .menu-logo .logo-text-container {
       position: relative;
-      text-align: center;
+      display: inline-block; 
       line-height: 1;
     }
 
-    .bazara {
+    .menu-logo .bazara-style {
       font-family: 'Questrial', sans-serif;
-      font-size: 197px;
+      font-size: 34px; 
       color: #c8c5c5;
     }
 
-    .safia {
+    .menu-logo .safia-style {
       position: absolute;
-      top: 0;
+      top: 0; 
       left: 50%;
       transform: translateX(-50%);
       font-family: 'Great Vibes', cursive;
-      font-size: 208px;
+      font-size: 30px; 
       color: #0c0c0c;
       pointer-events: none;
       opacity: 0.75;
+      white-space: nowrap;
     }
 
-    .subtitle {
-      margin-top: 20px;
+    .menu-logo .subtitle-style {
+      margin-top: 4px; 
       font-family: 'Inter', sans-serif;
-      font-size: 32.6px;
+      font-size: 10px; /* Lesbare Größe für den Untertitel im Menü */
       color: #000000;
       opacity: 0.9;
+      line-height: 1.2; /* Korrigierte Zeilenhöhe für bessere Lesbarkeit */
+      text-align: center;
+    }
+
+    /* Navigationslinks */
+    .nav-links {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+    }
+
+    .nav-links li {
+      margin-left: 45px; /* Vergrößerter Abstand zwischen den Menüpunkten */
+    }
+
+    .nav-links li:last-child {
+      margin-right: 20px; /* Zusätzlicher Rand rechts für den letzten Menüpunkt */
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #000000;
+      font-family: 'Poppins', sans-serif; /* Geänderte Schriftart */
+      font-weight: 300; /* Schriftgewicht für Light */
+      font-size: 16px;
+    }
+
+    .nav-links a:hover {
+      text-decoration: underline;
+    }
+    /* Beispielhafter Inhalt */
+    .content-placeholder {
+      padding: 20px 25px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <div class="wrapper">
-    <div class="bazara">BAZARA</div>
-    <div class="safia">safia</div>
+  <nav class="main-nav">
+    <div class="menu-logo">
+      <a href="index.html" class="logo-link">
+        <div class="logo-text-container">
+          <div class="bazara-style">BAZARA</div>
+          <div class="safia-style">safia</div>
+        </div>
+        <div class="subtitle-style">Hausarztpraxis</div>
+      </a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="leistungen.html">Leistungen</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+  </nav>
+
+  <div class="content-placeholder">
+    <h1>Willkommen</h1>
+    <p>Der Inhalt dieser Seite kann hier platziert werden.</p>
   </div>
-  <div class="subtitle">Hausarztpraxis</div>
 
 </body>
 </html>
