--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
-      font-smooth: always; 
-      padding-top: 100px; /* Angepasster Platz für die fixe Navigationsleiste (ca. Höhe der Nav-Bar) */
+      font-smooth: always;
+      /* padding-top: 93px; */ /* Entfernt, damit Hero-Section oben beginnt */
     }
 
     .main-nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #ffffff;
-      border-bottom: 1px solid #000000;
-      padding: 20px 25px; /* Deutlich erhöhtes Padding oben/unten für mehr Höhe der Navigationsleiste */
+      background-color: rgba(230, 230, 230, 0.15); /* #e6e6e6 mit 0.5 Transparenz (weniger transparent) */
+      border-bottom: 1px solid #c8c5c5; /* Linienfarbe geändert */
+      padding: 0 25px; /* Padding links/rechts, vertikales Padding wird durch Höhe und align-items gesteuert */
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      box-sizing: border-box; 
-      z-index: 1000;
+      height: 93px; /* Feste Höhe für die Navigationsleiste */
+      box-sizing: border-box;
+      z-index: 1000; 
+      backdrop-filter: blur(8px); /* Stärkerer Unschärfeeffekt für den Hintergrund */
+      -webkit-backdrop-filter: blur(8px); /* Safari-Präfix für Unschärfeeffekt */
     }
 
     /* Logo Stile für das Menü */
@@ -37,7 +40,7 @@
       text-decoration: none;
       color: inherit;
       display: inline-block;
-      padding-top: 3px;
+      padding-top: 4px;
     }
 
     .menu-logo .logo-text-container {
@@ -94,7 +97,7 @@
 
     .nav-links a {
       text-decoration: none;
-      color: #000000;
+      color: #ffffff; /* Schriftfarbe der Menüpunkte auf Weiß geändert */
       font-family: 'Poppins', sans-serif; /* Geänderte Schriftart */
       font-weight: 300; /* Schriftgewicht für Light */
       font-size: 16px;
@@ -103,10 +106,29 @@
     .nav-links a:hover {
       text-decoration: underline;
     }
-    /* Beispielhafter Inhalt */
-    .content-placeholder {
-      padding: 20px 25px;
+
+    /* Hero Section für das große Bild */
+    .hero-section {
+      height: 100vh; /* Volle Viewport-Höhe */
+      background-image: url('/assets/startseite.png'); /* Beispielbild, bitte ersetzen */
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
+      color: #ffffff; /* Standardtextfarbe für Inhalte im Hero-Bereich */
+    }
+
+    .hero-section h1 {
+      font-size: 3rem;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Textschatten für bessere Lesbarkeit */
+    }
+    .hero-section p {
+      font-size: 1.2rem;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.5); /* Textschatten für bessere Lesbarkeit */
     }
   </style>
 </head>
@@ -130,9 +152,9 @@
     </ul>
   </nav>
 
-  <div class="content-placeholder">
+  <div class="hero-section">
     <h1>Willkommen</h1>
-    <p>Der Inhalt dieser Seite kann hier platziert werden.</p>
+    <p>Dies ist der Bereich für das große Willkommensbild und erste Informationen.</p>
   </div>
 
 </body>
