--- a/index.html
+++ b/index.html
@@ -137,6 +137,51 @@
       text-shadow: 1px 1px 3px rgba(0,0,0,0.5); /* Textschatten für bessere Lesbarkeit */
       margin-top: 10px;
     }
+
+    /* Neuer Bereich unter Hero */
+    .info-section {
+      background-color: #6e370e;
+      color: #ffffff; /* Helle Schriftfarbe für guten Kontrast */
+      padding: 60px 40px; /* Ausreichend Innenabstand */
+      display: flex;
+      align-items: flex-start; /* Oben ausrichten, falls Texte unterschiedlich lang sind */
+      gap: 30px; /* Abstand zwischen linkem und rechtem Teil */
+    }
+
+    .info-section .left-column {
+      flex-basis: 30%; /* Linke Spalte nimmt 30% ein */
+      display: flex;
+      align-items: center; /* Punkt und Text vertikal zueinander zentrieren */
+      justify-content: center; /* Inhalt horizontal zentrieren */
+      padding-top: 60px; /* "Hausarztpraxis Bazara" weiter nach unten verschieben */
+      align-self: flex-start; /* Verhindert vertikales Strecken der Spalte */
+    }
+
+    .info-section .right-column {
+      flex-basis: 70%; /* Rechte Spalte nimmt 70% ein */
+      padding-top: 5px; /* Reduziert, um den großen Text etwas anzuheben */
+      padding-right: 85px; /* Weiter vergrößerter Abstand zum rechten Rand */
+    }
+
+    .info-section .left-column .bullet-point {
+      font-size: 24px; /* Größe des Punktes */
+      margin-right: 10px;
+      line-height: 1; /* Verhindert zusätzlichen vertikalen Platz durch den Punkt */
+    }
+
+    .info-section .left-column .practice-name {
+      font-size: 18px;
+      font-family: 'Poppins', sans-serif; /* Konsistente Schriftart */
+      font-weight: 300; /* Light, falls gewünscht, ansonsten normal */
+      line-height: 1.2; /* Für präzise Berechnung der vertikalen Mitte */
+    }
+
+    .info-section .right-column .welcome-text {
+      font-size: 60px; /* Schriftgröße weiter erhöht */
+      font-family: 'Poppins', sans-serif; /* Konsistente Schriftart */
+      font-weight: 300; /* Poppins Light */
+      line-height: 1.3; /* Bessere Lesbarkeit für längeren Text */
+    }
   </style>
 </head>
 <body>
@@ -163,6 +208,16 @@
     <div class="hero-text-wrapper">
       <h1>Gesund werden.<br>Gesund bleiben.</h1>
       <h2>Wir begleiten Sie – persönlich, nah und mit Zeit.</h2>
+    </div>
+  </div>
+
+  <div class="info-section">
+    <div class="left-column">
+      <span class="bullet-point">&bull;</span>
+      <span class="practice-name">Hausarztpraxis Bazara</span>
+    </div>
+    <div class="right-column">
+      <p class="welcome-text">Herzlich willkommen in unserer Praxis. Wir nehmen uns Zeit für Ihre Gesundheit – mit Erfahrung, Empathie und einem verlässlichen Team.</p>
     </div>
   </div>
 
