--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     .sprechzeiten-section {
       background-color: #ffffff; /* Hintergrundfarbe wie Leistungsbereich, anpassbar */
       color: #000000;
-      padding: 60px 40px; /* Etwas weniger Padding oben als Leistungsbereich wegen der Linie */
+      padding: 0 40px 60px 40px; /* padding-top auf 0 gesetzt, andere Paddings beibehalten */
       text-align: center;
     }
 
@@ -344,7 +344,7 @@
       width: 80%;
       height: 1px; /* Linie dünner gemacht */
       background-color: #6e370e;
-      margin: 0 auto 40px auto; /* Zentriert und Abstand nach unten */
+      margin: 0 auto 80px auto; /* Zentriert und Abstand nach unten weiter vergrößert */
     }
 
     .sprechzeiten-section .sub-heading-container {
