--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
       justify-content: flex-start; /* Linksbündig */
       align-items: center;
       margin-bottom: 15px;
-      /* padding-left: 10%; Wird durch Flexbox-Layout der Spalten gesteuert */
+      padding-left: 20px; /* Zusätzlicher Einzug für den Sub-Heading-Container */
     }
 
     .werte-section .sub-heading-bullet {
