--- a/index.html
+++ b/index.html
@@ -785,6 +785,110 @@
       text-align: center;
     }
 
+    .footer-bottom-left-text {
+      position: absolute;
+      bottom: 60px; /* Abstand vom unteren Rand */
+      left: 140px;  /* Gleicher linker Abstand wie der Inhalt oben links */
+      text-align: left;
+      z-index: 5; /* Über dem Logo */
+      font-family: 'Poppins', sans-serif; /* Konsistente Schriftart */
+      font-weight: 300; /* Poppins Light */
+      font-size: 30px;
+      line-height: 1.5;
+    }
+
+    .footer-bottom-left-text .hausarzt-color {
+      color: #d5ad8f;
+    }
+    .footer-bottom-left-text .bazara-color {
+      color: #ffffff;
+    }
+    .footer-contact-hours-container {
+      position: absolute;
+      bottom: 60px; /* Gleicher Abstand vom unteren Rand wie die anderen Elemente */
+      left: 25%; /* Weiter nach rechts verschoben, Wert anpassbar */
+      width: 60%; /* Breite des Containers, anpassbar */
+      display: flex;
+      justify-content: flex-start; /* Geändert, um Elemente am Anfang auszurichten */
+      z-index: 5; /* Über dem Logo */
+      font-family: 'Poppins', sans-serif;
+      font-weight: 300; /* Poppins Light */
+      font-size: 12px;
+      color: #ffffff; /* Standardtextfarbe für diesen Bereich */
+    }
+
+    .footer-contact-column,
+    .footer-hours-column {
+      flex-basis: 48%; /* Gibt jeder Spalte etwas weniger als die Hälfte für einen kleinen Abstand */
+      /* Die Breite kann bei Bedarf auch auf 'auto' oder einen festen Wert gesetzt werden */
+      text-align: left;
+    }
+
+    .footer-contact-column p,
+    .footer-hours-column p {
+      margin: 0 0 5px 0; /* Kleiner Abstand zwischen den Zeilen */
+      line-height: 1.6; /* Zeilenhöhe angepasst */
+    }
+    
+    .footer-contact-column {
+      margin-right: 0px; /* Abstand zwischen Kontakt- und Öffnungszeiten-Spalte, anpassbar */
+      padding-left: 250px; /* Schiebt den Inhalt der Kontakt-Spalte nach rechts, anpassbar */
+    }
+
+    .footer-contact-column p:last-child,
+    .footer-hours-days p:last-child,
+    .footer-hours-times p:last-child {
+      margin-bottom: 0; /* Entfernt den unteren Abstand vom letzten p-Element */
+    }
+
+    .footer-hours-column .hours-title {
+      margin-bottom: 10px; /* Etwas mehr Abstand für den Titel "Öffnungszeiten" */
+    }
+
+    .footer-hours-details {
+      display: flex;
+    }
+
+    .footer-hours-days,
+    .footer-hours-times {
+      flex-basis: 50%;
+      /* text-align: left; ist bereits Standard für p-Elemente in diesem Kontext */
+    }
+
+    .footer-hours-days p,
+    .footer-hours-times p {
+       margin: 0 0 5px 0;
+       line-height: 1.6; /* Zeilenhöhe angepasst */
+    }
+
+    .footer-hours-days {
+      margin-right: -90px; /* Schiebt die Zeiten-Spalte nach links, anpassbar */
+    }
+
+
+
+
+    .footer-bottom-right-links {
+      position: absolute;
+      bottom: 60px; /* Gleicher Abstand vom unteren Rand wie der Text links */
+      right: 140px; /* Abstand vom rechten Rand */
+      text-align: left; /* Textausrichtung innerhalb des Containers auf links geändert */
+      z-index: 5; /* Über dem Logo */
+    }
+
+    .footer-bottom-right-links a {
+      display: block; /* Damit die Links untereinander stehen */
+      font-family: 'Poppins', sans-serif;
+      font-weight: 300; /* Poppins Light */
+      font-size: 12px; /* Schriftgröße auf 12px gesetzt */
+      color: #ffffff; /* Helle Schrift für dunklen Footer */
+      text-decoration: none;
+      margin-bottom: 8px; /* Abstand zwischen den Links */
+    }
+    .footer-bottom-right-links a:last-child {
+      margin-bottom: 0;
+    }
+
   </style>
 </head>
 <body>
@@ -1028,6 +1132,42 @@
           </div>
           <div class="subtitle-style">Hausarztpraxis</div>
         </a>
+      </div>
+    </div>
+    <div class="footer-bottom-wrapper">
+      <div class="footer-bottom-left-text">
+        <span class="hausarzt-color">Hausarztpraxis</span><br>
+        <span class="bazara-color">Bazara</span>
+      </div>
+      <div class="footer-contact-hours-container">
+        <div class="footer-contact-column">
+          <p>Kontakt:</p>
+          <p>Alte Hellersdorfer Str.</p>
+          <p>12629 Berlin</p>
+          <p>Telefon: +49 (0) 30 9939 168</p>
+          <p>Telefax: +49 (0) 30 9940 2335</p>
+        </div>
+        <div class="footer-hours-column">
+          <p class="hours-title">Öffnungszeiten</p>
+          <div class="footer-hours-details">
+            <div class="footer-hours-days">
+              <p>Mo, Di, Fr:</p>
+              <p>Mo:</p>
+              <p>Do:</p>
+              <p>Mi:</p>
+            </div>
+            <div class="footer-hours-times">
+              <p>8:30 - 12 Uhr</p>
+              <p>15:00 - 18 Uhr</p>
+              <p>13:00 - 18 Uhr</p>
+              <p>nach Vereinbarung</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom-right-links">
+        <a href="impressum.html">Impressum</a>
+        <a href="datenschutzerklärung.html">Datenschutzerklärung</a>
       </div>
     </div>
   </footer>
