--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
       top: 140px; /* Erhöht, damit der Titel früher stoppt und mehr Abstand oben hat */
       align-self: flex-start; /* Verhindert, dass die Spalte unnötig gestreckt wird */
       padding-left: 170px; /* Abstand der Titel zum linken Rand der Spalte hinzugefügt */
-      height: calc(100vh - 120px); /* Damit es nicht über den unteren Rand hinaus sticky ist, anpassbar */
+      height: calc(100vh - 570px); /* Höhe so angepasst, dass sie vom top-Offset bis zum Viewport-Boden reicht */
     }
 
     .werte-list-scrollable {
